# NNApproximator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
examples/: 0_get_library_files.sh  1_build_the_program.sh  2_Ex.1_train_a_network.sh  3_Ex.2_infer_values.sh  4_Ex.3_get_min_max.sh  5_intermediate_results.sh  README  README.md  data.csv
include/MachineLearningTest/: neuralnetwork.h  torchtest.h
include/NeuralNetwork/: logic.h  networkanalyzer.h  neuralnetwork.h
include/Utilities/: constants.h  datanormalizator.h  dataprocessor.h  datasplitter.h  fileparser.h  optionparser.h  programoptions.h
libs/: getLibTorch.sh
libs/libtorch/: build-hash  build-version
source/: CMakeLists.txt  main.cpp
source/NeuralNetwork/: CMakeLists.txt  logic.cpp  networkanalyzer.cpp  neuralnetwork.cpp
source/Utilities/: CMakeLists.txt  datanormalizator.cpp  dataprocessor.cpp  datasplitter.cpp  fileparser.cpp  optionparser.cpp
source/torchtest/: CMakeLists.txt  neuralnetwork.cpp  torchtest.cpp
